Complete login page, Complete account page for teacher, Add some JS to clear input fields or show/hide password fields

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
     <title>ERP</title>
 </head>
-<body>
+<body class="dark:bg-gray-900">
     {% block content %} {% endblock content %}
 
     <!-- Flowbite JS -->
