--- a/app_users/templates/app_users/login.html
+++ b/app_users/templates/app_users/login.html
@@ -5,7 +5,7 @@
 {% block content %}
 <section class="h-[100vh] bg-gray-50 dark:bg-gray-900" style="background: url('https://i.pinimg.com/736x/97/c0/07/97c00759d90d786d9b6096d274ad3e07.jpg');">
     <div class="h-[100vh] flex flex-row items-center justify-evenly px-6 py-8 mx-auto md:h-screen lg:py-0">
-        <img class="hidden lg:block w-1/2" src="{% static 'images/login.png' %}" alt="Login">
+        <img class="hidden lg:block w-1/3" src="{% static 'images/login.png' %}" alt="Login">
         <div class="w-1/2 bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
             <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
                 <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
@@ -15,15 +15,31 @@
                     {% csrf_token %}
                     {% for field in form %}
                         <div>
-                            <label for="id_{{ field.name }}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{ field.label }}:</label>
-                            {{ field }}
+                            <!-- <label for="id_{{ field.name }}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{ field.label }}:</label> -->
+                                {% if field.name == 'password' %}
+                                    <div class="relative">
+                                        <i class="absolute text-white material-icons left-2.5 top-1/2 -translate-y-1/2">lock</i>
+                                        {{ field }}
+                                        <i onclick="togglePasswordVisibility('id_{{ field.name }}')" id="toggleIcon" class="material-icons text-white absolute right-2.5 hover:cursor-pointer select-none top-1/2 -translate-y-1/2">visibility</i>
+                                    </div>  
+                                {% else %} 
+                                <div class="relative">
+                                    <i class="absolute text-white material-icons left-2.5 top-1/2 -translate-y-1/2">person</i>
+                                    {{ field }}
+                                </div>
+                                {% endif %} 
                         </div>
                     {% endfor %}
                     <button type="submit" class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">{% trans 'Kirish' %}</button>
+                    <div class="text-white font-medium text-sm">
+                        {% trans 'Parolni yodingizdan chiqardingizmi ?' %}
+                        <a class="transition text-blue-500 hover:text-blue-400" href="">{% trans 'Parolni tiklash' %}</a>
+                    </div>
                 </form>
             </div>
         </div>
 
     </div>
 </section>
+<script src="{% static 'js/login/password.js' %}"></script>
 {% endblock content %}
