--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
 </head>
 <body class="dark:bg-gray-900">
     {% block content %} {% endblock content %}
+    {% include 'components/_messages.html' %}
 
     <!-- Flowbite JS -->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
