--- a/app_users/templates/app_users/login.html
+++ b/app_users/templates/app_users/login.html
@@ -20,7 +20,7 @@
                                     <div class="relative">
                                         <i class="absolute text-white material-icons left-2.5 top-1/2 -translate-y-1/2">lock</i>
                                         {{ field }}
-                                        <i onclick="togglePasswordVisibility('id_{{ field.name }}')" id="toggleIcon" class="material-icons text-white absolute right-2.5 hover:cursor-pointer select-none top-1/2 -translate-y-1/2">visibility</i>
+                                        <i onclick="togglePasswordVisibility('toggleIcon', 'id_password')" id="toggleIcon" class="material-icons text-white absolute right-2.5 hover:cursor-pointer select-none top-1/2 -translate-y-1/2">visibility</i>
                                     </div>  
                                 {% else %} 
                                 <div class="relative">
@@ -33,12 +33,11 @@
                     <button type="submit" class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">{% trans 'Kirish' %}</button>
                     <div class="text-white font-medium text-sm">
                         {% trans 'Parolni yodingizdan chiqardingizmi ?' %}
-                        <a class="transition text-blue-500 hover:text-blue-400" href="">{% trans 'Parolni tiklash' %}</a>
+                        <a class="transition text-blue-500 hover:text-blue-400" href="{% url 'password_reset' %}">{% trans 'Parolni tiklash' %}</a>
                     </div>
                 </form>
             </div>
         </div>
-
     </div>
 </section>
 <script src="{% static 'js/login/password.js' %}"></script>
