--- a/templates/components/_nav.html
+++ b/templates/components/_nav.html
@@ -11,7 +11,7 @@
            </button>
           <a href="https://flowbite.com" class="flex ms-2 md:me-24">
             <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 me-3" alt="FlowBite Logo" />
-            <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">Flowbite</span>
+            <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">ERP</span>
           </a>
         </div>
         <div class="flex items-center">
@@ -33,7 +33,7 @@
                 </div>
                 <ul class="py-1" role="none">
                   <li>
-                    <a href="#" class="flex items-center gap-2 px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
+                    <a href="{% url 'account' %}" class="flex items-center gap-2 px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
                       <i class="text-sm material-icons">person</i>
                       {% trans 'Shaxsiy kabinet' %}
                     </a>
