--- a/app_main/templates/app_main/teacher-groups.html
+++ b/app_main/templates/app_main/teacher-groups.html
@@ -29,40 +29,64 @@
                      {% trans "Guruh nomi" %}
                   </th>
                   <th scope="col" class="px-6 py-3 text-center">
-                     {% trans "Fan" %}
+                     {% trans "Holat" %}
                   </th>
                   <th scope="col" class="px-6 py-3 text-center">
-                     {% trans "Ustoz" %}
+                     {% trans "Filial" %}
                   </th>
-                  <th scope="col" class="px-6 py-3 text-center">
-                     {% trans "O'quvchilar soni" %}
-                  </th>
+                  {% if request.user.role == 'ADMIN' or request.user.role == 'SUPERUSER' %}
+                     <th scope="col" class="px-6 py-3 text-center">
+                        {% trans "Ustoz" %}
+                     </th>
+                     <th scope="col" class="px-6 py-3 text-center">
+                        {% trans "O'quvchilar soni" %}
+                     </th>
+                  {% endif %}
                   <th scope="col" class="px-6 py-3 text-end">
                      {% trans "Boshlangan sana" %}
                   </th>
                </tr>
             </thead>
             <tbody>
-               <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
-                  <td class="px-6 py-4 text-start">
-                     1
-                  </td>
-                  <td class="px-6 py-4 text-center">
-                     Python Django (Standart) N49
-                  </td>
-                  <td class="px-6 py-4 text-center">
-                     Dasturlash
-                  </td>
-                  <td class="px-6 py-4 text-center">
-                     Ulug'bek Umarlaliyev
-                  </td>
-                  <td class="px-6 py-4 text-center">
-                     30
-                  </td>
-                  <td class="px-6 py-4 text-end">
-                     25.05.2021
-                  </td>
-               </tr>
+               {% for group in teacher_groups %}
+                  <tr class="group hover:cursor-pointer odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
+                     <td class="px-6 py-4 text-start dark:group-hover:bg-slate-800 transition">
+                        {{ forloop.counter }}
+                     </td>
+                     <td class="px-6 py-4 text-center dark:group-hover:bg-slate-800 transition">
+                        {{ group }}
+                     </td>
+                     <td class="px-6 py-4 text-center flex justify-center dark:group-hover:bg-slate-800 transition">
+                        {% if group.has_started %}
+                           <div class="rounded border border-sky-500 bg-sky-900 bg-opacity-50 dark:text-gray-300 px-2">
+                              Faol
+                           </div>
+                        {% elif group.has_not_started %}
+                           <div class="rounded border border-slate-500 bg-slate-900 bg-opacity-50 dark:text-gray-300 px-2">
+                              Boshlanmagan
+                           </div>
+                        {% elif group.has_ended %}
+                           <div class="rounded border border-red-500 bg-red-900 bg-opacity-50 dark:text-gray-300 px-2">
+                              Tugagan
+                           </div>
+                        {% endif %}
+                     </td>
+                     <td class="px-6 py-4 text-center dark:group-hover:bg-slate-800 transition">
+                        {{ group.branch }}
+                     </td>
+                     {% if request.user.role == 'ADMIN' or request.user.role == 'SUPERUSER' %}
+                        <td class="px-6 py-4 text-center dark:group-hover:bg-slate-800 transition">
+                           {{ group.teacher.fullname }}
+                        </td>
+                        <td class="px-6 py-4 text-center dark:group-hover:bg-slate-800 transition">
+                           {{ group.student_set.all|length }}
+                        </td>
+                     {% endif %}
+                     <td class="px-6 py-4 text-end dark:group-hover:bg-slate-800 transition">
+                        {{ group.start_date|date:"d.m.Y" }}
+                     </td>
+                  </tr>
+               {% endfor %}
             </tbody>
          </table>
       </div>   
