--- a/app_main/templates/app_main/teacher-groups.html
+++ b/app_main/templates/app_main/teacher-groups.html
@@ -1,22 +1,44 @@
 {% extends 'base.html' %} 
-{% load i18n %} 
+{% load i18n static %} 
 
 {% block content %} 
 {% include 'components/_nav.html' %} 
 {% include 'components/_aside.html' %}
 <div class="p-4 sm:ml-64">
 	<div class="p-4 rounded-lg mt-14">
-      <div class="pb-4 bg-white dark:bg-gray-900">
+      <div class="flex items-center gap-2 pb-4 bg-white dark:bg-gray-900">
          <label for="table-search" class="sr-only">{% trans 'Qidirish' %}</label>
-         <div class="relative mt-1">
+         <div class="relative">
              <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
                  <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"></path>
                  </svg>
              </div>
-             <input autofocus type="text" id="table-search" class="block pt-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
+             <input value="{{ search }}" autofocus type="search" id="table-search" class="block pt-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
              placeholder="{% trans 'Guruh nomi bo`yicha qidirish' %}">
          </div>
+            
+            <button id="dropdownDividerButton" data-dropdown-toggle="dropdownDivider" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-2 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2 text-center inline-flex items-center dark:bg-gray-600 dark:hover:bg-gray-700 dark:focus:ring-blue-500" type="button">
+               {{ group_status }}
+               <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+               </svg>
+            </button>
+            
+            <div id="dropdownDivider" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+               <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDividerButton">
+                  <li>
+                     <a href="?group-status=active" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{% trans 'Faol' %}</a>
+                  </li>
+                  <li>
+                     <a href="?group-status=not-active" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{% trans 'Boshlanmagan' %}</a>
+                  </li>
+                  <li>
+                     <a href="?group-status=ended" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{% trans 'Tugagan' %}</a>
+                  </li>
+               </ul>
+            </div>
+   
      </div>
       <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
          <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
@@ -42,14 +64,17 @@
                         {% trans "O'quvchilar soni" %}
                      </th>
                   {% endif %}
+                  <th scope="col" class="px-6 py-3 text-center">
+                     {% trans "Boshlanish sanasi" %}
+                  </th>
                   <th scope="col" class="px-6 py-3 text-end">
-                     {% trans "Boshlangan sana" %}
+                     {% trans "Tugash sanasi" %}
                   </th>
                </tr>
             </thead>
             <tbody>
                {% for group in teacher_groups %}
-                  <tr class="group hover:cursor-pointer odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
+                  <tr onclick="window.location = '{% url 'teacher_group_detail' group.id %}'" class="group hover:cursor-pointer odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
                      <td class="px-6 py-4 text-start dark:group-hover:bg-slate-800 transition">
                         {{ forloop.counter }}
                      </td>
@@ -82,8 +107,11 @@
                            {{ group.student_set.all|length }}
                         </td>
                      {% endif %}
-                     <td class="px-6 py-4 text-end dark:group-hover:bg-slate-800 transition">
+                     <td class="px-6 py-4 text-center dark:group-hover:bg-slate-800 transition">
                         {{ group.start_date|date:"d.m.Y" }}
+                     </td>
+                     <td class="px-6 py-4 text-end dark:group-hover:bg-slate-800 transition">
+                        {{ group.end_date|date:"d.m.Y" }}
                      </td>
                   </tr>
                {% endfor %}
@@ -92,4 +120,5 @@
       </div>   
    </div>
 </div>
+<script src="{% static 'js/teacher-groups/table-search.js' %}"></script>
 {% endblock content %}
